--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
+  "Dependencies": {
     "@testing-library/jest-dom": "^5.8.0",
     "@testing-library/react": "^9.5.0",
     "gh-pages": "^3.2.3"
